<resources>
    <string name="app_name">Journal</string>
    <string name="log_back_in">Log Back In</string>
    <string name="logged_out">Hey, You\'re Signed Out!</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="name">Name</string>

    <!--Strings related to register-->
    <string name="register">Register</string>
    <string name="r_password">Password</string>
    <string name="r_email">Email</string>

    <!--Strings related to start-->
    <string name="sign_in">SIGN IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="welcome">Hey, welcome to Journal!</string>

    <!--Strings related to newentryactivity-->
    <string name="enter_title">Enter Title</string>
    <string name="type_entry">Type Journal Entry</string>
    <string name="post_entry">POST ENTRY</string>
    <string name="entry_title">Entry Title</string>
    <string name="updated_time">Updated Time</string>
</resources>