<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewEntryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/new_entry_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#006555" />

        <EditText
            android:id="@+id/new_entry_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/enter_title"
            android:padding="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/secondary_text_dark" />

        <EditText
            android:id="@+id/new_entry_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#888888"
            android:ems="10"
            android:gravity="top"
            android:layout_marginTop="3dp"
            android:hint="@string/type_entry"
            android:inputType="textMultiLine"
            android:padding="10dp" />

        <Button
            android:id="@+id/new_entry_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#006555"
            android:fontFamily="sans-serif"
            android:textSize="16dp"
            android:text="@string/post_entry"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
